@@ -21,8 +21,13 @@ import static org.hyperledger.besu.ethereum.core.InMemoryKeyValueStorageProvider
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.Mockito.when;
 
+import org.hyperledger.besu.config.JsonQbftConfigOptions;
+import org.hyperledger.besu.config.QbftConfigOptions;
+import org.hyperledger.besu.consensus.common.bft.BftForkSpec;
+import org.hyperledger.besu.consensus.common.bft.BftForksSchedule;
 import org.hyperledger.besu.consensus.common.validator.VoteProvider;
 import org.hyperledger.besu.consensus.common.validator.blockbased.BlockValidatorProvider;
+import org.hyperledger.besu.consensus.qbft.MutableQbftConfigOptions;
 import org.hyperledger.besu.datatypes.Address;
 import org.hyperledger.besu.datatypes.Hash;
 import org.hyperledger.besu.ethereum.chain.MutableBlockchain;
@@ -32,7 +37,6 @@ import org.hyperledger.besu.ethereum.core.BlockBody;
 import org.hyperledger.besu.ethereum.core.BlockHeader;
 import org.hyperledger.besu.ethereum.core.BlockHeaderTestFixture;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 
@@ -92,8 +96,9 @@ public class ForkingValidatorProviderTest {
 
   @Test
   public void usesInitialValidatorProviderWhenNoForks() {
-    final ValidatorSelectorForksSchedule forksSchedule =
-        new ValidatorSelectorForksSchedule(createBlockFork(0), Collections.emptyList());
+    final BftForksSchedule<QbftConfigOptions> forksSchedule =
+        new BftForksSchedule<>(createBlockFork(0), List.of());
+
     final ForkingValidatorProvider validatorProvider =
         new ForkingValidatorProvider(
             blockChain, forksSchedule, blockValidatorProvider, contractValidatorProvider);
@@ -108,8 +113,8 @@ public class ForkingValidatorProviderTest {
 
   @Test
   public void migratesFromBlockToContractValidatorProvider() {
-    final ValidatorSelectorForksSchedule forksSchedule =
-        new ValidatorSelectorForksSchedule(
+    final BftForksSchedule<QbftConfigOptions> forksSchedule =
+        new BftForksSchedule<>(
             createBlockFork(0), List.of(createContractFork(1L, CONTRACT_ADDRESS_1)));
     final ForkingValidatorProvider validatorProvider =
         new ForkingValidatorProvider(
@@ -121,9 +126,9 @@ public class ForkingValidatorProviderTest {
 
   @Test
   public void migratesFromContractToBlockValidatorProvider() {
-    final ValidatorSelectorForksSchedule forksSchedule =
-        new ValidatorSelectorForksSchedule(
-            createContractFork(0, CONTRACT_ADDRESS_1), List.of(createBlockFork(1L)));
+    final BftForksSchedule<QbftConfigOptions> forksSchedule =
+        new BftForksSchedule<>(
+            createContractFork(0, CONTRACT_ADDRESS_1), List.of(createBlockFork(1)));
     final ForkingValidatorProvider validatorProvider =
         new ForkingValidatorProvider(
             blockChain, forksSchedule, blockValidatorProvider, contractValidatorProvider);
@@ -139,8 +144,8 @@ public class ForkingValidatorProviderTest {
 
   @Test
   public void migratesFromContractToContractValidatorProvider() {
-    final ValidatorSelectorForksSchedule forksSchedule =
-        new ValidatorSelectorForksSchedule(
+    final BftForksSchedule<QbftConfigOptions> forksSchedule =
+        new BftForksSchedule<>(
             createBlockFork(0),
             List.of(
                 createContractFork(1L, CONTRACT_ADDRESS_1),
@@ -157,10 +162,11 @@ public class ForkingValidatorProviderTest {
 
   @Test
   public void voteProviderIsDelegatesToHeadFork() {
-    final ValidatorSelectorForksSchedule forksSchedule =
-        new ValidatorSelectorForksSchedule(
+    final BftForksSchedule<QbftConfigOptions> forksSchedule =
+        new BftForksSchedule<>(
             createBlockFork(0),
             List.of(createBlockFork(1), createContractFork(2, CONTRACT_ADDRESS_1)));
+
     final ForkingValidatorProvider validatorProvider =
         new ForkingValidatorProvider(
             blockChain, forksSchedule, blockValidatorProvider, contractValidatorProvider);
@@ -196,12 +202,16 @@ public class ForkingValidatorProviderTest {
         });
   }
 
-  private ValidatorSelectorConfig createContractFork(
+  private BftForkSpec<QbftConfigOptions> createContractFork(
       final long block, final Address contractAddress) {
-    return ValidatorSelectorConfig.createContractConfig(block, contractAddress.toHexString());
+    final MutableQbftConfigOptions qbftConfigOptions =
+        new MutableQbftConfigOptions(JsonQbftConfigOptions.DEFAULT);
+    qbftConfigOptions.setValidatorContractAddress(Optional.of(contractAddress.toHexString()));
+    return new BftForkSpec<>(block, qbftConfigOptions);
   }
 
-  private ValidatorSelectorConfig createBlockFork(final long block) {
-    return ValidatorSelectorConfig.createBlockConfig(block);
+  private BftForkSpec<QbftConfigOptions> createBlockFork(final long block) {
+    final QbftConfigOptions qbftConfigOptions = JsonQbftConfigOptions.DEFAULT;
+    return new BftForkSpec<>(block, qbftConfigOptions);
   }
 }
